--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "npx prettier --write pages/ components/ backend/"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -17,6 +17,7 @@
     "date-fns": "^2.28.0",
     "ethers": "^5.6.8",
     "next": "12.1.6",
+    "prettier": "^2.7.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-toastify": "^9.0.4",
